JPA 엔티티 구조 리팩토링 및 연관관계 매핑