@@ -2,8 +2,10 @@ package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.dto.request.ReadStatusCreateRequest;
 import com.sprint.mission.discodeit.dto.request.ReadStatusUpdateRequest;
-import com.sprint.mission.discodeit.dto.response.ReadStatusResponse;
+import com.sprint.mission.discodeit.dto.response.ReadStatusDto;
+import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.ReadStatus;
+import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.exception.ChannelNotFoundException;
 import com.sprint.mission.discodeit.exception.ReadStatusAlreadyExistsException;
 import com.sprint.mission.discodeit.exception.ReadStatusNotFoundException;
@@ -12,13 +14,10 @@ import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ReadStatusService;
-import org.springframework.context.annotation.Primary;
-import org.springframework.stereotype.Service;
-
-import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import org.springframework.context.annotation.Primary;
+import org.springframework.stereotype.Service;
 
 @Service
 @Primary
@@ -36,28 +35,24 @@ public class BasicReadStatusService implements ReadStatusService {
   }
 
   @Override
-  public ReadStatusResponse create(ReadStatusCreateRequest request) {
-    userRepository.findById(request.userId())
+  public ReadStatusDto create(ReadStatusCreateRequest request) {
+    User user = userRepository.findById(request.userId())
         .orElseThrow(() -> new UserNotFoundException(request.userId()));
-    channelRepository.findById(request.channelId())
+
+    Channel channel = channelRepository.findById(request.channelId())
         .orElseThrow(() -> new ChannelNotFoundException(request.channelId()));
 
     boolean isAlreadyExist = readStatusRepository.findAll().stream()
-        .anyMatch(rs -> rs.getUserId().equals(request.userId())
-            && rs.getChannelId().equals(request.channelId()));
+        .anyMatch(rs -> rs.getUser().getId().equals(request.userId())
+            && rs.getChannel().getId().equals(request.channelId()));
 
     if (isAlreadyExist) {
       throw new ReadStatusAlreadyExistsException(request.userId(), request.channelId());
     }
 
-    ReadStatus readStatus = ReadStatus.builder()
-        .id(UUID.randomUUID())
-        .createdAt(Instant.now())
-        .updatedAt(Instant.now())
-        .userId(request.userId())
-        .channelId(request.channelId())
-        .readAt(Instant.now())
-        .build();
+    ReadStatus readStatus = new ReadStatus(
+        user, channel, request.lastReadAt()
+    );
 
     readStatusRepository.save(readStatus);
 
@@ -66,33 +61,31 @@ public class BasicReadStatusService implements ReadStatusService {
 
 
   @Override
-  public List<ReadStatusResponse> findAllByUserId(UUID userId) {
+  public List<ReadStatusDto> findAllByUserId(UUID userId) {
     return readStatusRepository.findAll().stream()
-        .filter(rs -> rs.getUserId().equals(userId))
+        .filter(rs -> rs.getUser().getId().equals(userId))
         .map(this::convertToResponse)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
-  public ReadStatusResponse update(UUID id, ReadStatusUpdateRequest request) {
+  public ReadStatusDto updateLastReadAt(UUID id, ReadStatusUpdateRequest request) {
     ReadStatus readStatus = readStatusRepository.findById(id)
         .orElseThrow(() -> new ReadStatusNotFoundException(id));
 
-    readStatus.update(request.newLastReadAt());
+    readStatus.updateLastReadAt(request.newLastReadAt());
     readStatusRepository.save(readStatus);
 
     return convertToResponse(readStatus);
   }
 
 
-  private ReadStatusResponse convertToResponse(ReadStatus readStatus) {
-    return new ReadStatusResponse(
+  private ReadStatusDto convertToResponse(ReadStatus readStatus) {
+    return new ReadStatusDto(
         readStatus.getId(),
-        readStatus.getCreatedAt(),
-        readStatus.getUpdatedAt(),
-        readStatus.getUserId(),
-        readStatus.getChannelId(),
-        readStatus.getReadAt()
+        readStatus.getUser().getId(),
+        readStatus.getChannel().getId(),
+        readStatus.getLastReadAt()
     );
   }
 }
